--- a/Client/index.html
+++ b/Client/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <title>Actividad</title>
+  <title>Customers</title>
 </head>
 
 <body>
@@ -91,7 +91,13 @@
           <div class="card-footer text-muted text-right">
             <button type="submit" onclick="save()" class="btn btn-outline-success" id="guardar">Registrar</button>            
         </form>
-        <button  class="btn btn-warning" onclick="update()" id="Modificar">Modificar</button>
+        <button type="submit" class="btn btn-outline-warning" onclick="update()" id="Modificar">Modificar</button>
+    </div>
+    <div>
+      <br>
+      <a href="offices.html"><button  class="btn btn-outline-info" id="offices" style="text-align: left;">Offices</button></a>
+      <a href="products.html"><button  class="btn btn-outline-info" id="products" style="text-align: left;">Products</button></a>
+      <a href="productsLine.html"><button  class="btn btn-outline-info" id="productlines" style="text-align: left;">productlines</button></a>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
