--- a/Client/offices.html
+++ b/Client/offices.html
@@ -19,7 +19,7 @@
 
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
-  <script src="./mainOficces.js"></script>
+
   <div class="container-fluid">
     <div class="card text-center">
       <div class="card-header">
@@ -80,9 +80,10 @@
       <br>
       <a href="offices.html"><button  class="btn btn-outline-info" id="offices" style="text-align: left;">Offices</button></a>
       <a href="products.html"><button  class="btn btn-outline-info" id="products" style="text-align: left;">Products</button></a>
-      <a href="productsLine.html"><button  class="btn btn-outline-info" id="productlines" style="text-align: left;">product Lines</button></a>
+      <a href="productLines.html"><button  class="btn btn-outline-info" id="productlines" style="text-align: left;">product Lines</button></a>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+  <script src="./mainOficces.js"></script>
 </body> <!-- -->
 </html>
