--- a/Client/index.html
+++ b/Client/index.html
@@ -97,7 +97,7 @@
       <br>
       <a href="offices.html"><button  class="btn btn-outline-info" id="offices" style="text-align: left;">Offices</button></a>
       <a href="products.html"><button  class="btn btn-outline-info" id="products" style="text-align: left;">Products</button></a>
-      <a href="productsLine.html"><button  class="btn btn-outline-info" id="productlines" style="text-align: left;">productlines</button></a>
+      <a href="productLines.html"><button  class="btn btn-outline-info" id="productlines" style="text-align: left;">productlines</button></a>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
